// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxInput Component CheckboxInput renders highlighted 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="field gds-checkbox-container"
      >
        <label
          class="input-checkbox-field-read-only"
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fas,square"
            />
          </div>
          checkbox label 0
        </label>
        <label
          class="input-checkbox-field-read-only input-checkbox-field-checked"
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fas,square-check"
            />
          </div>
          checkbox label 1
        </label>
        <label
          class="input-checkbox-field-read-only"
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fas,square"
            />
          </div>
          checkbox label 2
        </label>
        <label
          class="input-checkbox-field-read-only"
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fas,square"
            />
          </div>
          checkbox label 3
        </label>
        <label
          class="input-checkbox-field-read-only field-highlighted"
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fas,square"
            />
          </div>
          checkbox label 4
        </label>
        <label
          class="input-checkbox-field-read-only"
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fas,square"
            />
          </div>
          checkbox label 5
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="field gds-checkbox-container"
    >
      <label
        class="input-checkbox-field-read-only"
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        checkbox label 0
      </label>
      <label
        class="input-checkbox-field-read-only input-checkbox-field-checked"
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fas,square-check"
          />
        </div>
        checkbox label 1
      </label>
      <label
        class="input-checkbox-field-read-only"
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        checkbox label 2
      </label>
      <label
        class="input-checkbox-field-read-only"
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        checkbox label 3
      </label>
      <label
        class="input-checkbox-field-read-only field-highlighted"
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        checkbox label 4
      </label>
      <label
        class="input-checkbox-field-read-only"
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fas,square"
          />
        </div>
        checkbox label 5
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxInput Component CheckboxInput renders with input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="field gds-checkbox-container"
      >
        <label
          class=""
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fal,square"
            />
          </div>
          checkbox label 0
        </label>
        <label
          class="input-checkbox-field-checked"
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fas,square-check"
            />
          </div>
          checkbox label 1
        </label>
        <label
          class=""
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fal,square"
            />
          </div>
          checkbox label 2
        </label>
        <label
          class=""
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fal,square"
            />
          </div>
          checkbox label 3
        </label>
        <label
          class=""
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fal,square"
            />
          </div>
          checkbox label 4
        </label>
        <label
          class=""
        >
          <div
            class="checkbox-marker"
          >
            <i
              class="icon"
              icon="fal,square"
            />
          </div>
          checkbox label 5
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="field gds-checkbox-container"
    >
      <label
        class=""
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        checkbox label 0
      </label>
      <label
        class="input-checkbox-field-checked"
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fas,square-check"
          />
        </div>
        checkbox label 1
      </label>
      <label
        class=""
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        checkbox label 2
      </label>
      <label
        class=""
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        checkbox label 3
      </label>
      <label
        class=""
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        checkbox label 4
      </label>
      <label
        class=""
      >
        <div
          class="checkbox-marker"
        >
          <i
            class="icon"
            icon="fal,square"
          />
        </div>
        checkbox label 5
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxInput Component CheckboxInput renders with no options 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="field gds-checkbox-container"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="field gds-checkbox-container"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
